# src/swagger/swagger-output.json
@@ -715,6 +715,170 @@
           }
         }
       }
+    },
+    "/router/createSpam": {
+      "post": {
+        "tags": [
+          "Common"
+        ],
+        "description": "API to create a new Spam record",
+        "parameters": [
+          {
+            "name": "enquiry_raised_date",
+            "in": "formData",
+            "type": "string",
+            "format": "date-time",
+            "example": "2025-11-07T00:00:00Z"
+          },
+          {
+            "name": "enquiry_answered_date",
+            "in": "formData",
+            "type": "string",
+            "format": "date-time",
+            "example": "2025-11-07T00:00:00Z"
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "type": "string",
+            "required": true,
+            "example": "abcd"
+          },
+          {
+            "name": "phone_number",
+            "in": "formData",
+            "type": "number",
+            "required": true,
+            "example": "123456789"
+          },
+          {
+            "name": "email",
+            "in": "formData",
+            "type": "string",
+            "required": true,
+            "example": "abcd@gmail,.com"
+          },
+          {
+            "name": "location",
+            "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "leads",
+            "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "remarks",
+            "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "added_by",
+            "in": "formData",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/router/editSpam": {
+      "patch": {
+        "tags": [
+          "Common"
+        ],
+        "description": "API to create a new candidate record",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "formData",
+            "type": "number",
+            "example": "1"
+          },
+          {
+            "name": "enquiry_raised_date",
+            "in": "formData",
+            "type": "string",
+            "format": "date-time",
+            "example": "2025-11-07T00:00:00Z"
+          },
+          {
+            "name": "enquiry_answered_date",
+            "in": "formData",
+            "type": "string",
+            "format": "date-time",
+            "example": "2025-11-07T00:00:00Z"
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "type": "string",
+            "example": "abcd"
+          },
+          {
+            "name": "phone_number",
+            "in": "formData",
+            "type": "number",
+            "example": "123456789"
+          },
+          {
+            "name": "email",
+            "in": "formData",
+            "type": "string",
+            "example": "abcd@gmail,.com"
+          },
+          {
+            "name": "location",
+            "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "leads",
+            "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "remarks",
+            "in": "formData",
+            "type": "string"
+          },
+          {
+            "name": "added_by",
+            "in": "formData",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/router/deleteSpam": {
+      "delete": {
+        "tags": [
+          "Common"
+        ],
+        "description": "API to Delete a Spam record",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "type": "number",
+            "required": true
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   }
 }
